# Human-Shape-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Doxyfile
src/: CMakeLists.txt  main.cpp
src/core/: Joint.cpp  Joint.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Skeleton.cpp  Skeleton.h  SkinnedVertex.cpp  SkinnedVertex.h  convert_axis_angle_and_translation_to_matrix.h  convert_axis_angle_to_matrix.h
src/io/: read_mat.h  read_model.h
src/ui/: Camera.cpp  Camera.h  Color.h  Drawable.cpp  Drawable.h  ModelRenderer.cpp  ModelRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Viewer.cpp  Viewer.h  gl_check_error.cpp  gl_check_error.h
src/ui/shaders/: mesh.vert  phong.frag  shader.frag  shader.vert
src/ui/utils/: compute_face_normal.h  unify_index_buffer.cpp  unify_index_buffer.h
